[gd_scene load_steps=24 format=3 uid="uid://cxwff3nt01gul"]

[ext_resource type="Script" path="res://Escenas/Eventos/romperplatos/evento_romper_platos.gd" id="1_6r5rn"]
[ext_resource type="Texture2D" uid="uid://difkvs4ri15mk" path="res://Sprites/QuickTimeEvent/fondoplatos.png" id="2_6owar"]
[ext_resource type="Script" path="res://Escenas/Eventos/romperplatos/Martillo.gd" id="2_krrne"]
[ext_resource type="Texture2D" uid="uid://m1icc5x7rlub" path="res://Sprites/QuickTimeEvent/brazomarpj1-1.png" id="2_ldjf1"]
[ext_resource type="Texture2D" uid="uid://dqtsl3p2axvdr" path="res://Sprites/QuickTimeEvent/patasPlato.png" id="3_0p7wu"]
[ext_resource type="Script" path="res://Escenas/Eventos/romperplatos/Plato.gd" id="5_2sp3d"]
[ext_resource type="Theme" uid="uid://v28k7lh33uhi" path="res://Escenas/Maingame/themeNameTags.tres" id="6_2dsyk"]
[ext_resource type="Texture2D" uid="uid://dgtakk4w7t5yb" path="res://Sprites/QuickTimeEvent/brazomarpj1-2.png" id="6_141ws"]
[ext_resource type="Texture2D" uid="uid://b4rtbvcjkyc4j" path="res://Sprites/QuickTimeEvent/brazomarpj2-1.png" id="7_3ras2"]
[ext_resource type="Texture2D" uid="uid://d1sa3ql83f6nf" path="res://Sprites/QuickTimeEvent/2.png" id="8_1phx8"]
[ext_resource type="Texture2D" uid="uid://wun40n2i3h41" path="res://Sprites/QuickTimeEvent/brazomarpj2-2.png" id="8_itf0f"]
[ext_resource type="AudioStream" uid="uid://dq4jf66in0p8" path="res://SFX/QuickTimeEvents/PlateBreaker/boing.mp3" id="9_541f7"]
[ext_resource type="Texture2D" uid="uid://cpwig8pnlt1pg" path="res://Sprites/QuickTimeEvent/1.png" id="9_ffqqa"]
[ext_resource type="Texture2D" uid="uid://6p1tfoa04b18" path="res://Sprites/QuickTimeEvent/Go.png" id="10_5ke27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tblx1"]
size = Vector2(140, 140)

[sub_resource type="Animation" id="Animation_oiywi"]
resource_name = "Martillando"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_ldjf1"), ExtResource("6_141ws"), ExtResource("2_ldjf1")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_golpeando"
}, {
"args": [false],
"method": &"set_golpeando"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3x2d6"]
resource_name = "MartillandoP2"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_3ras2"), ExtResource("8_itf0f"), ExtResource("7_3ras2")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_golpeando"
}, {
"args": [false],
"method": &"set_golpeando"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7diyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ldjf1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv3c1"]
_data = {
"MartillandoP1": SubResource("Animation_oiywi"),
"MartillandoP2": SubResource("Animation_3x2d6"),
"RESET": SubResource("Animation_7diyl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k42g4"]
radius = 100.02

[sub_resource type="Animation" id="Animation_ow0fn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprNumeros:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_1phx8")]
}

[sub_resource type="Animation" id="Animation_dq3ws"]
resource_name = "pop_numeros"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprNumeros:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SprNumeros:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1, 1.2, 1.4, 1.5, 1.7, 1.9),
"transitions": PackedFloat32Array(1.56917, 1, 1, 1.56917, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cambiar_roles"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SprNumeros:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_1phx8"), ExtResource("9_ffqqa"), ExtResource("10_5ke27")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1r55"]
_data = {
"RESET": SubResource("Animation_ow0fn"),
"pop_numeros": SubResource("Animation_dq3ws")
}

[node name="EventoRomperPlatos" type="Node2D"]
script = ExtResource("1_6r5rn")

[node name="TimerFinalEvento" type="Timer" parent="."]
process_callback = 0
wait_time = 25.0
one_shot = true
autostart = true

[node name="TimerCambiarRoles" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.712, 0.742593)
texture = ExtResource("2_6owar")
centered = false
metadata/_edit_lock_ = true

[node name="Martillo" type="Area2D" parent="."]
z_index = 1
position = Vector2(87, 90)
script = ExtResource("2_krrne")
speed = 500
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Martillo"]
position = Vector2(-754, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ldjf1")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Martillo"]
position = Vector2(159, 92)
shape = SubResource("RectangleShape2D_tblx1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Martillo"]
libraries = {
"": SubResource("AnimationLibrary_uv3c1")
}

[node name="Label" type="Label" parent="Martillo"]
offset_left = -402.0
offset_top = 99.0
offset_right = -38.0
offset_bottom = 144.0
theme = ExtResource("6_2dsyk")
text = "PLAYER : X"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Martillo"]
stream = ExtResource("9_541f7")
bus = &"SFX"

[node name="Plato" type="Area2D" parent="."]
position = Vector2(1168, 620)
script = ExtResource("5_2sp3d")
speed = 600
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Plato"]
position = Vector2(815, -5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0p7wu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plato"]
position = Vector2(-8, -6)
shape = SubResource("CircleShape2D_k42g4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plato"]

[node name="Label" type="Label" parent="Plato"]
offset_left = 11.0
offset_top = 177.0
offset_right = 171.0
offset_bottom = 222.0
theme = ExtResource("6_2dsyk")
text = "PLAYER : X"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[node name="Marker2DM1" type="Marker2D" parent="."]
position = Vector2(141, 175)

[node name="Marker2DM2" type="Marker2D" parent="."]
position = Vector2(131, 661)

[node name="Marker2DM3" type="Marker2D" parent="."]
position = Vector2(203, 421)

[node name="Marker2DP1" type="Marker2D" parent="."]
position = Vector2(1178, 152)

[node name="Marker2DP2" type="Marker2D" parent="."]
position = Vector2(1152, 642)

[node name="Marker2DP3" type="Marker2D" parent="."]
position = Vector2(1093, 415)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s1r55")
}

[node name="SprNumeros" type="Sprite2D" parent="."]
z_index = 6
z_as_relative = false
position = Vector2(666, 385)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("8_1phx8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="timeout" from="TimerFinalEvento" to="." method="_on_timer_final_evento_timeout"]
[connection signal="timeout" from="TimerCambiarRoles" to="." method="pop_timer"]
[connection signal="area_entered" from="Martillo" to="Martillo" method="_on_area_entered"]
[connection signal="area_exited" from="Martillo" to="Martillo" method="_on_area_exited"]
[connection signal="is_p2_hammer" from="Martillo" to="." method="relay_p2_position"]
